# Army_pubs_fastmcp_azd_deploy

./: pyproject.toml  testing_notebook.ipynb
src/: app.py  requirements.txt
